syntax = "proto3";

package streaming;

option java_package = "com.tomoyane.herts.grpcprotoexample";
option java_outer_classname = "StreamingProto";

message HelloRequest {
  int32 code = 1;
}

message HelloResponse {
  int32 code = 1;

}

service StreamingService {
  rpc test04(stream HelloRequest) returns (stream HelloResponse);
}